--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,54 +25,62 @@ jobs:
 ### Pre merge workflow ###############################################################################################################
 
   build-linux-pre-merge:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
-    outputs:
-      sha: ${{ steps.get_sha.outputs.sha }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          ref: ${{ github.event.pull_request.head.sha || github.sha }}
-      - name: Get current commit SHA
-        id: get_sha
-        run: echo "sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
-      - name: Setup Earthly
-        uses: ./.github/earthly-setup
-        with:
-          ssh_key: ${{ secrets.SUBSTRATE_REPO_SSH_KEY }}
-          config_tar: ${{ secrets.EARTHLY_TAR }}
-      - name: Acquire AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN_SECRET }}
-          aws-region: ${{ env.AWS_REGION }}
-      - name: Login to container registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ secrets.ECR_REGISTRY_SECRET }}
-      - name: Build and Artifacts and Push Image
-        env:
-          EARTHLY_CI: true
-          EARTHLY_OUTPUT: true
-          EARTHLY_PUSH: true
-        run: |
-          earthly -P +ci-pre-merge --image=${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node
-      - name: Upload partner-chains-node artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: partner-chains-node-artifact
-          path: partner-chains-node-artifact
-      - name: Upload chain spec artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: chain-specs
-          path: |
-            ./devnet_chain_spec.json
-            ./ci_preview_chain_spec.json
-            ./staging_preview_chain_spec.json
-            ./staging_preprod_chain_spec.json
+      runs-on: ubuntu-latest
+      if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
+      outputs:
+        sha: ${{ steps.get_sha.outputs.sha }}
+      steps:
+        - name: Checkout for Earthfile
+          uses: actions/checkout@v4
+          with:
+            fetch-depth: 0
+            ref: ${{ github.sha }}
+        - name: Checkout code to build
+          uses: actions/checkout@v4
+          with:
+            fetch-depth: 0
+            ref: ${{ github.event.pull_request.head.sha }}
+            path: ./to-build
+        - name: Get current commit SHA
+          id: get_sha
+          working-directory: ./to-build
+          run: echo "sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
+        - name: Setup Earthly
+          uses: ./.github/earthly-setup
+          with:
+            ssh_key: ${{ secrets.SUBSTRATE_REPO_SSH_KEY }}
+            config_tar: ${{ secrets.EARTHLY_TAR }}
+        - name: Acquire AWS credentials
+          uses: aws-actions/configure-aws-credentials@v4
+          with:
+            role-to-assume: ${{ secrets.AWS_ROLE_ARN_SECRET }}
+            aws-region: ${{ env.AWS_REGION }}
+        - name: Login to container registry
+          uses: docker/login-action@v3
+          with:
+            registry: ${{ secrets.ECR_REGISTRY_SECRET }}
+        - name: Build and Artifacts and Push Image
+          working-directory: ./to-build
+          env:
+            EARTHLY_CI: true
+            EARTHLY_OUTPUT: true
+            EARTHLY_PUSH: true
+          run: |
+            earthly -P ../+ci-pre-merge --image=${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node
+        - name: Upload partner-chains-node artifact
+          uses: actions/upload-artifact@v4
+          with:
+            name: partner-chains-node-artifact
+            path: ./to-build/partner-chains-node-artifact
+        - name: Upload chain spec artifacts
+          uses: actions/upload-artifact@v4
+          with:
+            name: chain-specs
+            path: |
+              ./to-build/devnet_chain_spec.json
+              ./to-build/ci_preview_chain_spec.json
+              ./to-build/staging_preview_chain_spec.json
+              ./to-build/staging_preprod_chain_spec.json
 
   local-environment-tests:
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
@@ -185,13 +193,20 @@ jobs:
     outputs:
       sha: ${{ steps.get_sha.outputs.sha }}
     steps:
-      - name: Checkout master
+      - name: Checkout for Earthfile
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ github.sha }}
+      - name: Checkout code to build
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
           ref: master
+          path: ./to-build
       - name: Get current commit SHA
         id: get_sha
+        working-directory: ./to-build
         run: echo "sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
       - name: Setup Earthly
         uses: ./.github/earthly-setup
@@ -208,13 +223,15 @@ jobs:
         with:
           registry: ${{ secrets.ECR_REGISTRY_SECRET }}
       - name: Build and Artifacts and Push Image
+        working-directory: ./to-build
         env:
           EARTHLY_CI: true
           EARTHLY_OUTPUT: true
           EARTHLY_PUSH: true
         run: |
-          earthly -P +ci-post-merge --image=${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node --tags="latest"
+          earthly -P ../+ci-post-merge --image=${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node --tags="latest"
       - name: Rename artifact
+        working-directory: ./to-build
         run: |
           cp partner-chains-node partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
           chmod +x partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
@@ -222,16 +239,16 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: partner-chains-node-linux-artifact
-          path: partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
+          path: ./to-build/partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
       - name: Upload chain spec artifacts
         uses: actions/upload-artifact@v4
         with:
           name: chain-specs
           path: |
-            ./devnet_chain_spec.json
-            ./ci_preview_chain_spec.json
-            ./staging_preview_chain_spec.json
-            ./staging_preprod_chain_spec.json
+            ./to-build/devnet_chain_spec.json
+            ./to-build/ci_preview_chain_spec.json
+            ./to-build/staging_preview_chain_spec.json
+            ./to-build/staging_preprod_chain_spec.json
 
   build-macos-x86_64:
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
@@ -450,11 +467,17 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'workflow_dispatch'
     steps:
-      - name: Checkout specific SHA
+      - name: Checkout for Earthfile
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ github.sha }}
+      - name: Checkout code to build
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
           ref: ${{ inputs.sha }}
+          path: ./to-build
       - name: Setup Earthly
         uses: ./.github/earthly-setup
         with:
@@ -470,13 +493,15 @@ jobs:
         with:
           registry: ${{ secrets.ECR_REGISTRY_SECRET }}
       - name: Build and Artifacts and Push Image
+        working-directory: ./to-build
         env:
           EARTHLY_CI: true
           EARTHLY_OUTPUT: true
           EARTHLY_PUSH: true
         run: |
-          earthly -P +ci-workflow-dispatch --image=${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node 
+          earthly -P ../+ci-workflow-dispatch --image=${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node
       - name: Rename artifact
+        working-directory: ./to-build
         run: |
           cp partner-chains-node partner-chains-node-${{ inputs.sha }}-x86_64-linux
           chmod +x partner-chains-node-${{ inputs.sha }}-x86_64-linux
@@ -484,16 +509,16 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: partner-chains-node-linux-artifact
-          path: partner-chains-node-${{ inputs.sha }}-x86_64-linux
+          path: ./to-build/partner-chains-node-${{ inputs.sha }}-x86_64-linux
       - name: Upload chain spec artifacts
         uses: actions/upload-artifact@v4
         with:
           name: chain-specs
           path: |
-            ./devnet_chain_spec.json
-            ./ci_preview_chain_spec.json
-            ./staging_preview_chain_spec.json
-            ./staging_preprod_chain_spec.json
+            ./to-build/devnet_chain_spec.json
+            ./to-build/ci_preview_chain_spec.json
+            ./to-build/staging_preview_chain_spec.json
+            ./to-build/staging_preprod_chain_spec.json
   
   build-macos-x86_64-workflow-dispatch:
     if: github.event_name == 'workflow_dispatch'
