--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,13 +30,20 @@ jobs:
     outputs:
       sha: ${{ steps.get_sha.outputs.sha }}
     steps:
-      - name: Checkout
+      - name: Checkout for Earthfile
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.event.pull_request.head.sha || github.sha }}
+          ref: ${{ github.sha }}
+      - name: Checkout code to build
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ github.event.pull_request.head.sha }}
+          path: ./to-build
       - name: Get current commit SHA
         id: get_sha
+        working-directory: ./to-build
         run: echo "sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
       - name: Setup Earthly
         uses: ./.github/earthly-setup
@@ -53,26 +60,18 @@ jobs:
         with:
           registry: ${{ secrets.ECR_REGISTRY_SECRET }}
       - name: Build and Artifacts and Push Image
+        working-directory: ./to-build
         env:
           EARTHLY_CI: true
           EARTHLY_OUTPUT: true
           EARTHLY_PUSH: true
         run: |
-          earthly -P +ci-pre-merge --image=${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node
+          earthly -P ../+ci-pre-merge --image=${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node --tags="${{ steps.get_sha.outputs.sha }}"
       - name: Upload partner-chains-node artifact
         uses: actions/upload-artifact@v4
         with:
           name: partner-chains-node-artifact
-          path: partner-chains-node-artifact
-      - name: Upload chain spec artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: chain-specs
-          path: |
-            ./devnet_chain_spec.json
-            ./ci_preview_chain_spec.json
-            ./staging_preview_chain_spec.json
-            ./staging_preprod_chain_spec.json
+          path: ./partner-chains-node-artifact
 
   local-environment-tests:
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
@@ -185,13 +184,20 @@ jobs:
     outputs:
       sha: ${{ steps.get_sha.outputs.sha }}
     steps:
-      - name: Checkout master
+      - name: Checkout for Earthfile
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ github.sha }}
+      - name: Checkout code to build
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
           ref: master
+          path: ./to-build
       - name: Get current commit SHA
         id: get_sha
+        working-directory: ./to-build
         run: echo "sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
       - name: Setup Earthly
         uses: ./.github/earthly-setup
@@ -208,12 +214,13 @@ jobs:
         with:
           registry: ${{ secrets.ECR_REGISTRY_SECRET }}
       - name: Build and Artifacts and Push Image
+        working-directory: ./to-build
         env:
           EARTHLY_CI: true
           EARTHLY_OUTPUT: true
           EARTHLY_PUSH: true
         run: |
-          earthly -P +ci-post-merge --image=${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node --tags="latest"
+          earthly -P ../+ci-post-merge --image=${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node --tags="${{ steps.get_sha.outputs.sha }} latest"
       - name: Rename artifact
         run: |
           cp partner-chains-node partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
@@ -222,7 +229,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: partner-chains-node-linux-artifact
-          path: partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
+          path: ./partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
       - name: Upload chain spec artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -450,11 +457,17 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'workflow_dispatch'
     steps:
-      - name: Checkout specific SHA
+      - name: Checkout for Earthfile
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ github.sha }}
+      - name: Checkout code to build
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
           ref: ${{ inputs.sha }}
+          path: ./to-build
       - name: Setup Earthly
         uses: ./.github/earthly-setup
         with:
@@ -470,12 +483,13 @@ jobs:
         with:
           registry: ${{ secrets.ECR_REGISTRY_SECRET }}
       - name: Build and Artifacts and Push Image
+        working-directory: ./to-build
         env:
           EARTHLY_CI: true
           EARTHLY_OUTPUT: true
           EARTHLY_PUSH: true
         run: |
-          earthly -P +ci-workflow-dispatch --image=${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node 
+          earthly -P ../+ci-workflow-dispatch --image=${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node --tags="${{ inputs.sha }}"
       - name: Rename artifact
         run: |
           cp partner-chains-node partner-chains-node-${{ inputs.sha }}-x86_64-linux
@@ -484,7 +498,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: partner-chains-node-linux-artifact
-          path: partner-chains-node-${{ inputs.sha }}-x86_64-linux
+          path: ./partner-chains-node-${{ inputs.sha }}-x86_64-linux
       - name: Upload chain spec artifacts
         uses: actions/upload-artifact@v4
         with:
