--- a/.github/actions/artifacts/build-pc-artifacts/action.yml
+++ b/.github/actions/artifacts/build-pc-artifacts/action.yml
@@ -13,7 +13,6 @@ inputs:
 runs:
   using: "composite"
   steps:
-
     - name: Checkout
       uses: actions/checkout@v4
       with:
@@ -30,7 +29,6 @@ runs:
         elif [[ "${{ inputs.os }}" == "macos-arm64" ]]; then
           echo "PARTNER_CHAINS_NODE=partner-chains-node-${{ inputs.tag }}-aarch64-apple-darwin" >> $GITHUB_ENV
         fi
-
     - name: Install protoc
       shell: bash
       run: |
@@ -46,20 +44,28 @@ runs:
           unzip protoc-21.3-osx-aarch_64.zip -d $HOME/protoc
           sudo mv $HOME/protoc/bin/protoc /usr/local/bin/protoc
         fi
-
+    # Install LLVM for macOS builds - using specific version 19.1.7
     - name: Install LLVM for macOS
       if: startsWith(inputs.os, 'macos')
       shell: bash
       run: |
-        brew install llvm
-        echo "LLVM_PATH=$(brew --prefix llvm)" >> $GITHUB_ENV
-        echo "$(brew --prefix llvm)/bin" >> $GITHUB_PATH
+        # Install specific LLVM version 19 to match working environment
+        brew install llvm@19
+        echo "LLVM_PATH=$(brew --prefix llvm@19)" >> $GITHUB_ENV
         # Ensure LLVM is found first in PATH to avoid Apple's default version
-        echo 'export PATH="$(brew --prefix llvm)/bin:$PATH"' >> ~/.bash_profile
+        echo "$(brew --prefix llvm@19)/bin" >> $GITHUB_PATH
+        # Add to bash profile for any subshells
+        echo 'export PATH="$(brew --prefix llvm@19)/bin:$PATH"' >> ~/.bash_profile
         source ~/.bash_profile
-        # Verify LLVM version
-        clang --version
-
+        # Configure compiler flags
+        echo "CC=$(brew --prefix llvm@19)/bin/clang" >> $GITHUB_ENV
+        echo "CXX=$(brew --prefix llvm@19)/bin/clang++" >> $GITHUB_ENV
+        echo "LLVM_CONFIG=$(brew --prefix llvm@19)/bin/llvm-config" >> $GITHUB_ENV
+        # Verify the version matches your working environment
+        $(brew --prefix llvm@19)/bin/clang --version
+        # Create a configuration file like in your working environment
+        mkdir -p /opt/homebrew/etc/clang
+        echo "# clang configuration for GitHub Actions" > /opt/homebrew/etc/clang/arm64-apple-darwin24.cfg
     - name: Build partner-chains-node
       shell: bash
       run: |
@@ -76,24 +82,21 @@ runs:
           chmod +x $PARTNER_CHAINS_NODE
         elif [[ "${{ inputs.os }}" == "macos-x86_64" ]]; then
           rustup target add x86_64-apple-darwin
-          # Set LLVM environment variables for Rust build
-          export LLVM_CONFIG="${LLVM_PATH}/bin/llvm-config"
-          export CC="${LLVM_PATH}/bin/clang"
-          export CXX="${LLVM_PATH}/bin/clang++"
+          # Environment variables are already set in the LLVM installation step
+          # Use RUST_FLAGS to ensure the right toolchain is used
+          RUSTFLAGS="-C linker=${LLVM_PATH}/bin/clang" \
           cargo build -p partner-chains-node --locked --release --target x86_64-apple-darwin
           cp target/x86_64-apple-darwin/release/partner-chains-node $PARTNER_CHAINS_NODE
           chmod +x $PARTNER_CHAINS_NODE
         elif [[ "${{ inputs.os }}" == "macos-arm64" ]]; then
           rustup target add aarch64-apple-darwin
-          # Set LLVM environment variables for Rust build
-          export LLVM_CONFIG="${LLVM_PATH}/bin/llvm-config"
-          export CC="${LLVM_PATH}/bin/clang"
-          export CXX="${LLVM_PATH}/bin/clang++"
+          # Environment variables are already set in the LLVM installation step
+          # Use RUST_FLAGS to ensure the right toolchain is used
+          RUSTFLAGS="-C linker=${LLVM_PATH}/bin/clang" \
           cargo build -p partner-chains-node --locked --release --target aarch64-apple-darwin
           cp target/aarch64-apple-darwin/release/partner-chains-node $PARTNER_CHAINS_NODE
           chmod +x $PARTNER_CHAINS_NODE
         fi
-
     - name: Upload partner-chains-node artifact
       uses: actions/upload-artifact@v4
       with:
